# RavlX

./: .gitignore  CMakeLists.txt  README.md
src/3D/Ravl3D/: CMakeLists.txt
src/3D/Ravl3D/cmake/: Ravl3DConfig.cmake.in
src/3D/Ravl3D/doc/: Ravl.API.3D.Mesh.html
src/3D/Ravl3D/examples/: exBuildMesh.cc
src/3D/Ravl3D/src/: BuildTexTriMesh.cc  HEMesh.cc  HEMeshEdge.cc  HEMeshFace.cc  HEMeshFaceIter.cc  HEMeshVertex.cc  MeshShapes.cc  SurfacePoint3dArray.cc  TexTriMesh.cc  TexTriMeshBinIO.cc  Tri.cc  TriMesh.cc  TriMesh2HEMesh.cc  TriMeshBinIO.cc  Vertex.cc  VertexColourByteRGB.cc
src/3D/Ravl3D/tests/: testHEMesh.cc  testTriMesh.cc
src/3D/Ravl3DIO/: CMakeLists.txt
src/3D/Ravl3DIO/cmake/: Ravl3DIOConfig.cmake.in  Ravl3DIO_BodyConfig.cmake.in
src/3D/Ravl3DIO/data/: cube.tri
src/3D/Ravl3DIO/doc/: Ravl.API.3D.IO.html
src/3D/Ravl3DIO/src/: CTriFileIO.cc  FormatCTriFile.cc  FormatMeshObj.cc  FormatPOVRayFile.cc  FormatTriFile.cc  FormatVRMLFile.cc  MeshConv.cc  MeshIOObj.cc  POVRayFileIO.cc  RavlMeshIO.cc  TexTriMeshIO.cc  TriFileIO.cc  TriMeshIO.cc  VRMLFileIO.cc
src/3D/Ravl3DIO/tests/: testTriFileIO.cc
src/3D/RavlCameraCal/: CMakeLists.txt
src/3D/RavlCameraCal/cmake/: RavlCameraCalConfig.cmake.in
src/3D/RavlCameraCal/doc/: Ravl.API.3D.Camera_Calibration.html
src/3D/RavlCameraCal/src/: PinholeCamera0.cc  PinholeCamera1.cc  PinholeCamera2.cc  PinholeCamera3.cc  PinholeCameraArray.cc
src/3D/RavlVisualHull/: CMakeLists.txt
src/3D/RavlVisualHull/cmake/: RavlVisualHullConfig.cmake.in
src/3D/RavlVisualHull/src/: MovingLeastSquares.cc  VisualHull.cc  VoxelCarve.cc  VoxelClean.cc  VoxelColourCarve.cc  VoxelDistanceTransform.cc
src/3D/RavlVoxels/: CMakeLists.txt
src/3D/RavlVoxels/cmake/: RavlVoxelsConfig.cmake.in
src/3D/RavlVoxels/src/: VoxelRayIter.cc  VoxelSkeleton.cc  VoxelSurface.cc  VoxeliseMesh.cc
src/Applications/AVPlay/: CMakeLists.txt
src/Applications/AVPlay/applications/: AVPlay.cc
src/Applications/AVPlay/cmake/: AVPlayConfig.cmake.in
src/Applications/RavlClassWizard/: CMakeLists.txt
src/Applications/RavlClassWizard/applications/: cwiz.cc
src/Applications/RavlClassWizard/cmake/: RavlClassWizardConfig.cmake.in
src/Applications/RavlClassWizard/doc/: Ravl.API.Source_Tools.Class_Wizard.html
src/Applications/RavlClassWizard/src/: ClassWizard.cc  SourceCursor.cc
src/Applications/RavlDataServer/: CMakeLists.txt
src/Applications/RavlDataServer/applications/: dsd.cc
src/Applications/RavlDataServer/cmake/: RavlDataServerConfig.cmake.in  RavlDataServer_BodyConfig.cmake.in
src/Applications/RavlDataServer/src/: DataServer.cc  DataServerControlClient.cc  DataServerControlConnection.cc  DataServerControlInterface.cc  DataServerControlNetClient.cc  DataServerControlServer.cc  DataServerVFSNode.cc  DataServerVFSRealDir.cc  DataServerVFSRealFile.cc  MustLinkRavlDataServer.cc
src/Applications/RavlVPlay/: CMakeLists.txt
src/Applications/RavlVPlay/applications/: VCopy.cc  VPlay.cc
src/Applications/RavlVPlay/cmake/: RavlVPlayConfig.cmake.in
src/Applications/RavlVPlay/src/: GUIPlayControl.cc
src/Applications/SkinBlobFind/: CMakeLists.txt
src/Applications/SkinBlobFind/applications/: SkinBlobFind.cc
src/Applications/SkinBlobFind/cmake/: SkinBlobFindConfig.cmake.in
src/Applications/VGrab/: CMakeLists.txt
src/Applications/VGrab/applications/: VGrab.cc
src/Applications/VGrab/cmake/: VGrabConfig.cmake.in
src/Applications/conv/: CMakeLists.txt
src/Applications/conv/applications/: conv.cc
src/Applications/conv/cmake/: convConfig.cmake.in
src/Applications/conv/data/: in0.ppm
src/Applications/conv/tests/: testFileConverter.cc
src/Applications/doBatchProcess/: CMakeLists.txt
src/Applications/doBatchProcess/applications/: doBatchProcess.cc
src/Applications/doBatchProcess/cmake/: doBatchProcessConfig.cmake.in
src/Applications/mosaic/: CMakeLists.txt
src/Audio/RavlAudioFeatures/: CMakeLists.txt
src/Audio/RavlAudioIO/: CMakeLists.txt
src/Audio/RavlAudioUtil/: CMakeLists.txt
src/CompVision/RavlAAM/: CMakeLists.txt
src/CompVision/RavlAAMGUI/: CMakeLists.txt
src/CompVision/RavlVideo/: CMakeLists.txt
src/Contrib/: CMakeLists.txt
src/Contrib/CSPDriver/: CMakeLists.txt
src/Contrib/MarkupTool/: CMakeLists.txt
src/Contrib/PPDev/: CMakeLists.txt
src/Contrib/RavlAudioFile/: CMakeLists.txt
src/Contrib/RavlCrypto/: CMakeLists.txt
src/Contrib/RavlDMedia/: CMakeLists.txt
src/Contrib/RavlDPGraph/: CMakeLists.txt
src/Contrib/RavlDV/: CMakeLists.txt
src/Contrib/RavlDVDRead/: CMakeLists.txt
src/Contrib/RavlDevAudio/: CMakeLists.txt
src/Contrib/RavlEHS/: CMakeLists.txt
src/Contrib/RavlFace/: CMakeLists.txt
src/Contrib/RavlFireWire/: CMakeLists.txt
src/Contrib/RavlGUIGnome/: CMakeLists.txt
src/Contrib/RavlGUIOpenSceneGraph/: CMakeLists.txt
src/Contrib/RavlGnuPlot/: CMakeLists.txt
src/Contrib/RavlHtml/: CMakeLists.txt
src/Contrib/RavlImgGd/: CMakeLists.txt
src/Contrib/RavlImgIO1394dc/: CMakeLists.txt
src/Contrib/RavlImgIOJasper/: CMakeLists.txt
src/Contrib/RavlImgIOMeteor1/: CMakeLists.txt
src/Contrib/RavlImgIOV4L/: CMakeLists.txt
src/Contrib/RavlImgIOV4L2/: CMakeLists.txt
src/Contrib/RavlImgIOuEye/: CMakeLists.txt
src/Contrib/RavlIntelMKL/: CMakeLists.txt
src/Contrib/RavlLapack/: CMakeLists.txt
src/Contrib/RavlLapackWraps/: CMakeLists.txt
src/Contrib/RavlLibMPEG2/: CMakeLists.txt
src/Contrib/RavlMPEG2/: CMakeLists.txt
src/Contrib/RavlMemModules/: CMakeLists.txt
src/Contrib/RavlOpenCV/: CMakeLists.txt
src/Contrib/RavlPortAudio/: CMakeLists.txt
src/Contrib/RavlPulseAudio/: CMakeLists.txt
src/Contrib/RavlPython/: CMakeLists.txt
src/Contrib/RavlPythonSwig/: CMakeLists.txt
src/Contrib/RavlRLog/: CMakeLists.txt
src/Contrib/RavlRawVidIO/: CMakeLists.txt
src/Contrib/RavlTwoWayMap/: CMakeLists.txt
src/Contrib/RavlURLIO/: CMakeLists.txt
src/Contrib/RavlUUId/: CMakeLists.txt
src/Contrib/RavlXMPP/: CMakeLists.txt
src/Contrib/RavlXMPPIksemel/: CMakeLists.txt
src/Contrib/RavlXMPPLoudmouth/: CMakeLists.txt
src/Contrib/RavlZmq/: CMakeLists.txt
(+3503 files in other folders)
