
add_subdirectory(RavlImgIOV4L)
add_subdirectory(RavlImgIOMeteor1)
add_subdirectory(RavlURLIO)
add_subdirectory(CSPDriver)
add_subdirectory(RavlDMedia)
add_subdirectory(RavlMPEG2)
add_subdirectory(RavlLibMPEG2)
add_subdirectory(RavlDVDRead)
add_subdirectory(RavlDevAudio)
add_subdirectory(RavlAudioFile)
add_subdirectory(RavlPortAudio)
add_subdirectory(RavlPulseAudio)
add_subdirectory(RavlDV)
add_subdirectory(RavlFireWire)
add_subdirectory(RavlImgIO1394dc)
add_subdirectory(RavlDPGraph)
add_subdirectory(RavlGnuPlot)
add_subdirectory(PPDev)
add_subdirectory(RavlImgIOV4L2)
add_subdirectory(RavlCrypto)
add_subdirectory(RavlIntelMKL)
add_subdirectory(RavlImgIOJasper)
add_subdirectory(RavlGUIGnome)
add_subdirectory(RavlRawVidIO)
add_subdirectory(RavlEHS)
add_subdirectory(RavlImgGd)
add_subdirectory(RavlPython)
add_subdirectory(RavlPythonSwig)
add_subdirectory(RavlOpenCV)
add_subdirectory(RavlUUId)
add_subdirectory(RavlImgIOuEye)
add_subdirectory(RavlRLog)
add_subdirectory(RavlLapackWraps)
add_subdirectory(RavlLapack)
add_subdirectory(RavlGUIOpenSceneGraph)
add_subdirectory(RavlXMPP)
add_subdirectory(RavlXMPPLoudmouth)
add_subdirectory(RavlXMPPIksemel)
add_subdirectory(RavlZmq)
add_subdirectory(RavlTwoWayMap)
add_subdirectory(RavlFace)
#add_subdirectory(MarkupTool)
add_subdirectory(RavlMemModules)
add_subdirectory(RavlHtml)

